<?php

declare(strict_types=1);

use Illuminate\Database\Migrations\Migration;
use Illuminate\Database\Schema\Blueprint;
use Illuminate\Support\Facades\Schema;

return new class extends Migration
{
    /**
     * Run the migrations.
     */
    public function up(): void
    {
        Schema::create('farm_panel', function (Blueprint $table) {
            $table->id();
            $table->foreignId('solar_farm_id')->constrained('solar_farms')->cascadeOnDelete();
            $table->foreignId('solar_panel_id')->constrained('solar_panels')->cascadeOnDelete();
            $table->unsignedInteger('quantity')->default(1);
            $table->timestamps();
        });
    }

    /**
     * Reverse the migrations.
     */
    public function down(): void
    {
        Schema::dropIfExists('farm_panel');
    }
};
